[gd_scene load_steps=7 format=3 uid="uid://bpcv5khmjcl1w"]

[ext_resource type="TileSet" uid="uid://bsvacac1i6ot" path="res://tiles.tres" id="1_l812o"]
[ext_resource type="Script" path="res://scripts/road.gd" id="1_wgeeb"]
[ext_resource type="PackedScene" uid="uid://c074x7x487gjw" path="res://obstacles/tree.tscn" id="2_tdc03"]
[ext_resource type="PackedScene" uid="uid://be3h51wjad2ax" path="res://obstacles/rock.tscn" id="3_tqakp"]
[ext_resource type="PackedScene" uid="uid://bbqtonf540va1" path="res://obstacles/cirno.tscn" id="4_0mx1g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fh2g2"]
size = Vector2(451, 123)

[node name="Road" type="Node2D"]
script = ExtResource("1_wgeeb")
obstacles = Array[PackedScene]([ExtResource("3_tqakp"), ExtResource("2_tdc03"), ExtResource("4_0mx1g")])
obstacle_chances = Array[float]([0.0, 0.0, 0.3])
obstacle_starting = Array[float]([0.0, 400.0, 0.0])
spawn_at_player_pos_chance = 0.1

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_l812o")
format = 2
layer_0/tile_data = PackedInt32Array(-262151, 131072, 6, -196615, 131072, 6, -131079, 131072, 6, -65543, 131072, 6, -7, 131072, 6, 65529, 131072, 6, 131065, 131072, 6, 196601, 131072, 6, 262137, 131072, 6, 327673, 131072, 6, 393209, 131072, 6, 458745, 131072, 6, 524281, 131072, 6, -262150, 131072, 6, -196614, 131072, 6, -131078, 131072, 6, -65542, 131072, 6, -6, 131072, 6, 65530, 131072, 6, 131066, 131072, 6, 196602, 131072, 6, 262138, 131072, 6, 327674, 131072, 6, 393210, 131072, 6, 458746, 131072, 6, 524282, 131072, 6, -262149, 131072, 6, -196613, 131072, 6, -131077, 131072, 6, -65541, 131072, 6, -5, 131072, 6, 65531, 131072, 6, 131067, 131072, 6, 196603, 131072, 6, 262139, 131072, 6, 327675, 131072, 6, 393211, 131072, 6, 458747, 131072, 6, 524283, 131072, 6, -262148, 131072, 6, -196612, 131072, 6, -131076, 131072, 6, -65540, 131072, 6, -4, 131072, 6, 65532, 131072, 6, 131068, 131072, 6, 196604, 131072, 6, 262140, 131072, 6, 327676, 131072, 6, 393212, 131072, 6, 458748, 131072, 6, 524284, 131072, 6, -262147, 131072, 6, -196611, 131072, 6, -131075, 131072, 6, -65539, 131072, 6, -3, 131072, 6, 65533, 131072, 6, 131069, 131072, 6, 196605, 131072, 6, 262141, 131072, 6, 327677, 131072, 6, 393213, 131072, 6, 458749, 131072, 6, 524285, 131072, 6, -262146, 131072, 6, -196610, 131072, 6, -131074, 131072, 6, -65538, 131072, 6, -2, 131072, 6, 65534, 131072, 6, 131070, 131072, 6, 196606, 131072, 6, 262142, 131072, 6, 327678, 131072, 6, 393214, 131072, 6, 458750, 131072, 6, 524286, 131072, 6, -262145, 131072, 6, -196609, 131072, 6, -131073, 131072, 6, -65537, 131072, 6, -1, 131072, 6, 65535, 131072, 6, 131071, 131072, 6, 196607, 131072, 6, 262143, 131072, 6, 327679, 131072, 6, 393215, 131072, 6, 458751, 131072, 6, 524287, 131072, 6, -327680, 131072, 6, -262144, 131072, 6, -196608, 131072, 6, -131072, 131072, 6, -65536, 131072, 6, 0, 131072, 6, 65536, 131072, 6, 131072, 131072, 6, 196608, 131072, 6, 262144, 131072, 6, 327680, 131072, 6, 393216, 131072, 6, 458752, 131072, 6, -327679, 131072, 6, -262143, 131072, 6, -196607, 131072, 6, -131071, 131072, 6, -65535, 131072, 6, 1, 131072, 6, 65537, 131072, 6, 131073, 131072, 6, 196609, 131072, 6, 262145, 131072, 6, 327681, 131072, 6, 393217, 131072, 6, 458753, 131072, 6, -327678, 131072, 6, -262142, 131072, 6, -196606, 131072, 6, -131070, 131072, 6, -65534, 131072, 6, 2, 131072, 6, 65538, 131072, 6, 131074, 131072, 6, 196610, 131072, 6, 262146, 131072, 6, 327682, 131072, 6, 393218, 131072, 6, 458754, 131072, 6, -327677, 131072, 6, -262141, 131072, 6, -196605, 131072, 6, -131069, 131072, 6, -65533, 131072, 6, 3, 131072, 6, 65539, 131072, 6, 131075, 131072, 6, 196611, 131072, 6, 262147, 131072, 6, 327683, 131072, 6, 393219, 131072, 6, 458755, 131072, 6, -327676, 131072, 6, -262140, 131072, 6, -196604, 131072, 6, -131068, 131072, 6, -65532, 131072, 6, 4, 131072, 6, 65540, 131072, 6, 131076, 131072, 6, 196612, 131072, 6, 262148, 131072, 6, 327684, 131072, 6, 393220, 131072, 6, 458756, 131072, 6, -327675, 131072, 6, -262139, 131072, 6, -196603, 131072, 6, -131067, 131072, 6, -65531, 131072, 6, 5, 131072, 6, 65541, 131072, 6, 131077, 131072, 6, 196613, 131072, 6, 262149, 131072, 6, 327685, 131072, 6, 393221, 131072, 6, 458757, 131072, 6, -327674, 131072, 6, -262138, 131072, 6, -196602, 131072, 6, -131066, 131072, 6, -65530, 131072, 6, 6, 131072, 6, 65542, 131072, 6, 131078, 131072, 6, 196614, 131072, 6, 262150, 131072, 6, 327686, 131072, 6, 393222, 131072, 6, 458758, 131072, 6, -65546, 131072, 6, -10, 131072, 6, 65526, 131072, 6, 131062, 131072, 6, 196598, 131072, 6, 262134, 131072, 6, 327670, 131072, 6, 393206, 131072, 6, 458742, 131072, 6, 524278, 131072, 6, -262153, 327680, 3, -196617, 327680, 2, -131081, 327680, 3, -65545, 327680, 2, -9, 327680, 3, 65527, 327680, 2, 131063, 327680, 3, 196599, 327680, 2, 262135, 327680, 3, 327671, 327680, 2, 393207, 327680, 3, 458743, 327680, 2, 524279, 327680, 3, -262152, 131072, 6, -196616, 131072, 6, -131080, 131072, 6, -65544, 131072, 6, -8, 131072, 6, 65528, 131072, 6, 131064, 131072, 6, 196600, 131072, 6, 262136, 131072, 6, 327672, 131072, 6, 393208, 131072, 6, 458744, 131072, 6, 524280, 131072, 6, -327673, 131072, 6, -262137, 131072, 6, -196601, 131072, 6, -131065, 131072, 6, -65529, 131072, 6, 7, 131072, 6, 65543, 131072, 6, 131079, 131072, 6, 196615, 131072, 6, 262151, 131072, 6, 327687, 131072, 6, 393223, 131072, 6, 458759, 131072, 6, -327672, 65536, 3, -262136, 65536, 3, -196600, 65536, 2, -131064, 65536, 3, -65528, 65536, 2, 8, 65536, 3, 65544, 65536, 2, 131080, 65536, 3, 196616, 65536, 2, 262152, 65536, 3, 327688, 65536, 2, 393224, 65536, 3, 458760, 65536, 2, -327671, 131072, 6, -262135, 131072, 6, -196599, 131072, 6, -131063, 131072, 6, -65527, 131072, 6, 9, 131072, 6, 65545, 131072, 6, 131081, 131072, 6, 196617, 131072, 6, 262153, 131072, 6, 327689, 131072, 6, 393225, 131072, 6, 458761, 131072, 6, -327670, 131072, 6, -262134, 131072, 6, -196598, 131072, 6, -131062, 131072, 6, -65526, 131072, 6, 10, 131072, 6, 65546, 131072, 6, 131082, 131072, 6, 196618, 131072, 6, 262154, 131072, 6, 327690, 131072, 6, 393226, 131072, 6, 458762, 131072, 6, -327691, 131072, 6, -262155, 131072, 6, -196619, 131072, 6, 262133, 131072, 6, 327669, 131072, 6, 393205, 131072, 6, 458741, 131072, 6, 524277, 131072, 6, 589813, 131072, 6, 655349, 131072, 6, 589814, 131072, 6, 655350, 131072, 6, -327689, 327680, 2, 589815, 327680, 2, 655351, 327680, 3, -327688, 131072, 6, 589816, 131072, 6, 655352, 131072, 6, -327687, 131072, 6, 589817, 131072, 6, 655353, 131072, 6, -327686, 131072, 6, 589818, 131072, 6, 655354, 131072, 6, -327685, 131072, 6, 589819, 131072, 6, 655355, 131072, 6, -327684, 131072, 6, 589820, 131072, 6, 655356, 131072, 6, -327683, 131072, 6, 589821, 131072, 6, 655357, 131072, 6, -327682, 131072, 6, 589822, 131072, 6, 655358, 131072, 6, -327681, 131072, 6, 589823, 131072, 6, 655359, 131072, 6, -393216, 131072, 6, 524288, 131072, 6, 589824, 131072, 6, -393215, 131072, 6, 524289, 131072, 6, 589825, 131072, 6, -393214, 131072, 6, 524290, 131072, 6, 589826, 131072, 6, -393213, 131072, 6, 524291, 131072, 6, 589827, 131072, 6, -393212, 131072, 6, 524292, 131072, 6, 589828, 131072, 6, -393211, 131072, 6, 524293, 131072, 6, 589829, 131072, 6, -393210, 131072, 6, 524294, 131072, 6, 589830, 131072, 6, -393209, 131072, 6, 524295, 131072, 6, 589831, 131072, 6, -393208, 65536, 2, 524296, 65536, 2, 589832, 65536, 3, -393207, 131072, 6, 524297, 131072, 6, 589833, 131072, 6, -393206, 131072, 6, 524298, 131072, 6, 589834, 131072, 6, -393205, 131072, 6, -327669, 131072, 6, -262133, 131072, 6, -196597, 131072, 6, -131061, 131072, 6, -65525, 131072, 6, 11, 131072, 6, 65547, 131072, 6, 131083, 131072, 6, 196619, 131072, 6, 262155, 131072, 6, 327691, 131072, 6, 393227, 131072, 6, 458763, 131072, 6, 524299, 131072, 6, 589835, 131072, 6, -327692, 131072, 6, -262156, 131072, 6, -196620, 131072, 6, -131084, 131072, 6, -65548, 131072, 6, -12, 131072, 6, 65524, 131072, 6, 131060, 131072, 6, 196596, 131072, 6, 262132, 131072, 6, 327668, 131072, 6, 393204, 131072, 6, 458740, 131072, 6, 524276, 131072, 6, 589812, 131072, 6, 655348, 131072, 6, -327690, 131072, 6, -262154, 131072, 6, -196618, 131072, 6, -131082, 131072, 6, -131083, 131072, 6, -65547, 131072, 6, -11, 131072, 6, 65525, 131072, 6, 131061, 131072, 6, 196597, 131072, 6)

[node name="Enter Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enter Area"]
position = Vector2(1.5, -139.5)
shape = SubResource("RectangleShape2D_fh2g2")

[node name="Exit Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit Area"]
position = Vector2(1.5, 687)
shape = SubResource("RectangleShape2D_fh2g2")
debug_color = Color(0.961303, 0, 0.0309184, 0.42)

[node name="ObstacleRange" type="Marker2D" parent="."]
position = Vector2(116, 0)

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="body_entered" from="Enter Area" to="." method="_on_enter_area_body_entered"]
[connection signal="body_entered" from="Exit Area" to="." method="_on_exit_area_body_entered"]
